Improved alignment with the pixel perfect: content block was divided into main-container and cover-container elements due to special margin for cover block; &nbsp were added in html,place__title wrapping fixed with adding special selector

--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -5,30 +5,27 @@
   grid-column: 2/3;
   grid-row-start: 4;
   display: grid;
-  grid-template-columns: calc((100% - 984px)/2) minmax(928px, 1fr) calc((100% - 984px)/2);
-  grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content)
-  minmax(min-content, max-content) minmax(min-content, max-content);
+  grid-template-columns: 1fr;
+  grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content);
   row-gap: 92px;
-  justify-items: center;
 }
 
 @media screen and (max-width: 1024px) {
   .content {
     grid-column: 1/-1;
-    grid-template-columns: 48px fit-content(928px) 48px; /*minmax(min-content, 928px);*/
   }
 }
 
 @media screen and (max-width: 768px) {
   .content {
-    grid-template-columns: 24px fit-content(720px) 24px;
-    row-gap: 88px;  
+    /*from pixel-perfect*/
+    row-gap: 60px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .content {
-    grid-template-columns: 16px fit-content(320px) 16px;
-    row-gap: 64px;  
+    /*from pixel-perfect*/
+    row-gap: 40px;
   }
 }
