--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,7 +4,6 @@
     max-height: 740px;
     height: 100%;
     grid-column: 1/-1;
-    grid-row-start: 5;
     position: relative;
 }
 
